create TokenResponse class, create client class to do requests on api via rest template, create dto, create RO, get cards from API, convert to entities, save to DB, create test controller, configure restTemplate, add ENUM converters to spring